<resources>
    <string name="app_name" translatable="false">WatchIt</string>
    <string name="home" translatable="false">Home</string>
    <string name="search" translatable="false">Search</string>
    <string name="watchlists" translatable="false">Watchlists</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="movies" translatable="false">Movies</string>
    <string name="tv_shows" translatable="false">TV Shows</string>
    <string name="watch" translatable="false">Watch</string>
    <string name="it" translatable="false">it</string>
    <string name="Title" translatable="false">Title</string>
    <string name="actorName" translatable="false">Actor Name</string>
    <string name="character" translatable="false">Character</string>
    <string name="placeholder_search_content" translatable="false">what you want to watch?</string>
    <string name="my_lists" translatable="false">My Lists</string>
    <string name="add_list_button" translatable="false">add list </string>
    <string name="user_name" translatable="false">User name</string>
    <string name="email" translatable="false">email</string>
    <string name="uploadBTN" translatable="false">upload</string>
    <string name="no_friends_yet" translatable="false">No friends yet</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="friends" translatable="false">Friends</string>
    <string name="search_users" translatable="false">Search users</string>
    <string name="no_titles_yet" translatable="false">No titles yet</string>
    <string name="add_to_list" translatable="false">Add to List</string>
    <string name="no_results" translatable="false">No results</string>
    <string name="back" translatable="false">Back</string>
    <string name="add_friend" translatable="false">Add Friend</string>
    <string name="remove_friend" translatable="false">Remove Friend</string>
    <string name="no_other_lists_found" translatable="false">No other lists found</string>
    <string name="choose_favorite" translatable="false">choose favorite</string>
    <string name="rating" translatable="false">Rating:</string>
    <string name="your_rating" translatable="false">Your Rating:</string>
    <string name="overview" translatable="false">Overview</string>
    <string name="cast" translatable="false">Cast</string>
    <string name="no_streaming" translatable="false">There are no streaming platforms available in your region.</string>
    <string name="where_to_watch" translatable="false">Where to watch?</string>
    <!--for firebaseUI-->

    <string name="fui_name_hint">Username</string>
    <string name="fui_missing_first_and_last_name">Enter name</string>



</resources>