<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background"
    android:layoutDirection="ltr">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cv_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/watch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch"
            android:textColor="@color/white"
            android:textSize="@dimen/default_title_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/it"
            android:textColor="@color/theme_yellow"
            android:textSize="@dimen/default_title_size"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/BTN_search"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/search"
            android:src="@drawable/search_btn"
            app:tint="@color/theme_yellow" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iProfile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/default_margin"
            android:src="@drawable/round_profile_circle"
            app:shapeAppearanceOverlay="@style/CircleImage" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/homeTabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/cv_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/theme_yellow"
        app:tabIndicatorHeight="1dp"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/theme_yellow"
        app:tabTextColor="#B3FFFFFF">


        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movies" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_shows" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMedia"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="@dimen/default_margin"
        android:paddingBottom="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeTabLayout"
        tools:listitem="@layout/media_item"/>


</androidx.constraintlayout.widget.ConstraintLayout>